# Timebarmarkers

./: .gitignore  LICENSE  README.md  build.bat  menu.py
cpp/: CMakeLists.txt  README_BUILD.md
cpp/src/: MarkerDialog.cpp  MarkerDialog.h  MarkerTypes.h  NukeUtils.cpp  NukeUtils.h  TimebarOverlay.cpp  TimebarOverlay.h  TimebarWidget.cpp  TimebarWidget.h  plugin_main.cpp
python/: marker_timebar.py
scripts/: check_marker_data.py  delete_old_storage_node.py  find_old_storage_node.py  print_qt_widgets.py
